<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@android:color/transparent"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:id="@+id/mid_scroll_layout">
        <LinearLayout android:orientation="vertical"
                      android:background="@null"
                      android:layout_marginTop="40dp"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginLeft="@dimen/big_padding"
                          android:layout_marginRight="@dimen/big_padding"
                          android:layout_marginTop="25dp"
                          android:background="@drawable/alpha_gred_bg"
                          android:orientation="vertical">
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="@dimen/login_reg_edt_height"
                              android:gravity="center"
                              android:orientation="horizontal">
                    <ImageView android:layout_width="24dp"
                               android:layout_height="24dp"
                               android:scaleType="fitCenter"
                               android:layout_marginLeft="@dimen/bsmall_padding"
                               android:src="@drawable/phone_icon" />
                    <EditText style="@style/LoginPageEdt"
                              android:layout_height="@dimen/login_reg_edt_height"
                              android:layout_width="match_parent"
                              android:background="@null"
                              android:hint="@string/phone"
                              android:inputType="phone"
                              android:textColorHint="@color/hint_text"
                              android:textColor="@color/white"
                              android:id="@+id/mobile_edt"/>
                </LinearLayout>
                <include layout="@layout/ssn_horizontal_line"/>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="@dimen/login_reg_edt_height"
                              android:gravity="center"
                              android:orientation="horizontal">
                    <ImageView android:layout_width="24dp"
                               android:layout_height="24dp"
                               android:scaleType="fitCenter"
                               android:layout_marginLeft="@dimen/bsmall_padding"
                               android:src="@drawable/sms_icon" />
                    <EditText style="@style/LoginPageEdt"
                              android:background="@null"
                              android:id="@+id/code_edt"
                              android:layout_height="match_parent"
                              android:textColorHint="@color/hint_text"
                              android:hint="@string/sms_code"
                              android:layout_width="0dp"
                              android:layout_weight="1"
                              android:inputType="phone"
                              android:textColor="@color/white"/>
                    <TextView style="@style/ww_grey_smallSize_text"
                              android:id="@+id/send_sms_code_tv"
                              android:textColor="@color/white"
                              android:layout_marginRight="@dimen/big_padding"
                              android:text="@string/send_sms_code"/>
                </LinearLayout>
            </LinearLayout>

            <FrameLayout android:layout_width="match_parent"
                          android:layout_height="@dimen/login_reg_edt_height">
                <TextView style="@style/ww_grey_smallSize_text"
                          android:id="@+id/error_message_tv"
                          android:textColor="@color/ssn_error_text"
                          android:text=""
                          android:layout_gravity="center"/>
            </FrameLayout>

            <Button style="@style/LargeBtnWhiteText"
                    android:text="@string/next"
                    android:enabled="true"
                    android:id="@+id/next_btn"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
